--- a/package.yml
+++ b/package.yml
@@ -8,44 +8,43 @@ author:
     email: jsinglet@gmail.com
 
 
-
-# a list of the named and versioned packages that must be installed before
-# installing 
-# depends:                               
-#   - package   : other-package   # represents a package that MUST be installed
-#     version   : 1.1.1
-#     platform  : all 
-#   - package   : other-package
-#     version   : 1.1.1
-#   - one-of:                     # at least one of these must be installed  
-#       - package: z3
-#         version: 1.1.2
-#         platform: all
-#       - package: why3
-#         version: 1.1.2
-#         platform: all
-
-#
-# assets that make up THIS package
-#
-
-# assets:
-#     - asset   : MAIN
-#       name    : my-asset
-#       url     : http://www.openjml.org/downloads/1.1.2.tar.gz  
-#       platform: all
+assets:
+    - asset   : MAIN
+      name    : Yices2 Distribution for Windows 
+      url     : "http://yices.csl.sri.com/cgi-bin/yices2-newnewdownload.cgi?file=yices-2.4.1-x86_64-pc-mingw32-static-gmp.zip&accept=I+Agree"
+      platform: windows
+    - asset   : MAIN
+      name    : Yices2 Distribution for OSX
+      url     : "http://yices.csl.sri.com/cgi-bin/yices2-newnewdownload.cgi?file=yices-2.4.1-x86_64-apple-darwin14.4.0-static-gmp.tar.gz&accept=I+Agree"
+      platform: osx
+    - asset   : MAIN
+      name    : Yices2 Distribution for Linux
+      url     : "http://yices.csl.sri.com/cgi-bin/yices2-newnewdownload.cgi?file=yices-2.4.1-x86_64-unknown-linux-gnu-static-gmp.tar.gz&accept=I+Agree"
+      platform: linux
         
-# assumes:
-#   - cmd: java --version # right now just support cmd -- maybe file exists?
-#     contains: 1.7
-#     message: "Sorry, but this package requires Java, version 1.7 or higher."
 
-
-# downloads everything to the .
-# install:
-#   - cmd: tar zxvf MAIN
-#     description: What this command does
-#     platform: all
-#   - cmd: tar zxvf $MAIN
-#     description: What this command does...
-#     platform: windows
+install:
+  - cmd: unzip MAIN
+    description: Unpacking Windows Distribution
+    platform: windows
+  - cmd: tar -zxvf  MAIN
+    description: Unpacking OSX Distribution
+    platform: osx
+  - cmd: tar -zxvf MAIN
+    description: Unpacking Linux Distribution
+    platform: linux
+  - cmd: cp yices-2.4.1/bin/yices.exe yices.exe
+    description: Restructuring...
+    platform: windows
+  - cmd: ln -s yices-2.4.1/bin/yices yices
+    description: Restructuring...
+    platform: linux
+  - cmd: ln -s yices-2.4.1/bin/yices yices.bin
+    description: Linking binary...
+    platform: osx
+  - cmd: mv yices.osx.sh yices
+    description: Adding OSX Shims...
+    platform: osx
+  - cmd: chmod +x yices
+    description: Setting Shim Executable...
+    platform: osx
